# skill_executor

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  FILE-READ-SEGMENTATION.md  P1-PROGRESS-REPORT.md  QWEN.md  README.md  STABILITY_ANALYSIS.md  TOOL-SYSTEM-IMPROVEMENTS.md  package-lock.json  package.json  pnpm-lock.yaml  test-bing-search.ts  tsconfig.json
.github/: P0-STABILITY-FIXES.md  P1-COMPRESSION-LOCK.md  copilot-instructions.md
.github/workflows/: release.yml
public/: index.html  player.html
public/css/: style.css
public/js/: app.js
public/js/modules/: api.js  context.js  conversation.js  events.js  main.js  message.js  modal.js  notify.js  preset.js  skill.js  state.js  stream.js  todo.js  utils.js  websocket.js  workdir.js
scripts/: copy-assets.js  kill-ports.js
src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/config/: constants.ts
src/electron/: main.ts  preload.ts
src/routes/: api.ts
src/services/: agentOrchestrator.ts  commandExecutor.ts  configLoader.ts  conversation.ts  database.ts  llm.ts  skillLoader.ts  streamChat.ts  systemPrompt.ts  toolExecutor.ts  tools.ts  websocket.ts  workingDir.ts
src/services/agent/: index.ts  orchestrator.ts  (+3 more)
src/types/: index.ts  sql.js.d.ts
src/utils/: tts-runner.ts
system/skills/: code-reviewer.md  edge-tts.md  git-helper.md  manim.md  project-analyst.md  tech-writer.md  test-engineer.md
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.vue  main.ts  utils.ts
(+74 files in other folders)
